--- a/viewer/viewer.csproj
+++ b/viewer/viewer.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+    <UserSecretsId>89d93d28-a052-4763-9948-8961cbe21aa2</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
